レポートの項目名を変更（「Lock Activity」→「Lock Conflicts」）

--- a/pg_stats_reporter/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter/pg_stats_reporter.ini.sample
@@ -64,8 +64,8 @@ statements = true
 ;## Long Transactions ##
 long_transactions = true
 
-;## Lock Activity ##
-lock_activity = true
+;## Lock Conflicts ##
+lock_conflicts = true
 
 ;### Operation Activity ###
 
