設定ファイルに関する細かい修正(11/22の打合せで指摘された項目)

--- a/html/pg_stats_reporter/doc/pg_stats_reporter.ini.sample
+++ b/html/pg_stats_reporter/doc/pg_stats_reporter.ini.sample
@@ -2,7 +2,7 @@
 ; pg_stats_reporter configuration file
 ;-------------------------------------
 
-[sample]
+[repository1]
 
 ;-------------------------------------
 ; database connection
@@ -92,7 +92,7 @@ parameter = true
 profiles = true
 
 
-[sample2]
+[repository2]
 
 ;-------------------------------------
 ; database connection
