レプリケーション遅延のレポート出力の処理を追記

--- a/pg_stats_reporter/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter/pg_stats_reporter.ini.sample
@@ -77,7 +77,8 @@ basic_statistics = true
 io_statistics = true
 
 ; -- Replication Activity --
-replication_activity = true
+current_replication_status = true
+replication_delays = true
 
 ; --- Information ---
 
