pg_stats_reporter v2.0 マニュアルを作成  - コマンドラインモードに関する説明を追加  - インストール手順を修正  - 動作環境を動作確認環境に変更し、記述内容を修正  - 動作確認の項目を追加  - 使用上の注意と制約の内容を更新  - FAQにworkerモードでの使用を推奨しない旨を追加

--- a/html/pg_stats_reporter/doc/files/pg_stats_reporter.ini.sample
+++ b/html/pg_stats_reporter/doc/files/pg_stats_reporter.ini.sample
@@ -2,6 +2,18 @@
 ; pg_stats_reporter configuration file
 ;-------------------------------------
 
+;-------------------------------------
+; global setting section
+;-------------------------------------
+
+[global_setting]
+install_directory = /var/www
+
+
+;-------------------------------------
+; repository DB setting section
+;-------------------------------------
+
 [repository1]
 
 ;-------------------------------------
@@ -77,7 +89,8 @@ basic_statistics = true
 io_statistics = true
 
 ; -- Replication Activity --
-replication_activity = true
+current_replication_status = true
+replication_delays = true
 
 ; --- Information ---
 
@@ -89,7 +102,7 @@ index = true
 parameter = true
 
 ; -- Profiles --
-profiles = true
+profiles = false
 
 
 [repository2]
@@ -99,7 +112,7 @@ profiles = true
 ;-------------------------------------
 
 host = localhost
-port = 5432
+port = 5433
 dbname = postgres
 username = postgres
 password =
@@ -167,7 +180,8 @@ basic_statistics = true
 io_statistics = true
 
 ; -- Replication Activity --
-replication_activity = true
+current_replication_status = true
+replication_delays = true
 
 ; --- Information ---
 
