pg_stats_reporter マニュアルの修正  - Webレポート機能にログレポートを追加  - Webレポート機能の性能レポートにアラート項目を追加  - インストール手順を再整理  - 動作確認環境を更新

--- a/html/pg_stats_reporter/doc/files/pg_stats_reporter.ini.sample
+++ b/html/pg_stats_reporter/doc/files/pg_stats_reporter.ini.sample
@@ -8,7 +8,7 @@
 
 [global_setting]
 install_directory = /var/www
-
+log_page_size = 1000
 
 ;-------------------------------------
 ; repository DB setting section
@@ -35,6 +35,9 @@ language = auto
 
 ; --- Summary ---
 summary = true
+
+; -- Alert --
+alert = true
 
 ; --- Database System ---
 
