--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -91,6 +91,7 @@ checkpoint_activity = true
 ; -- Autovacuum Activity --
 basic_statistics = true
 io_statistics = true
+analyze_statistics = true
 
 ; -- Replication Activity --
 current_replication_status = true
