--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -90,6 +90,7 @@ checkpoint_activity = true
 
 ; -- Autovacuum Activity --
 basic_statistics = true
+vacuum_cancels = true
 io_statistics = true
 analyze_statistics = true
 
