SQL実行計画表示対応

--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -76,6 +76,7 @@ fragmented_tables = true
 ; -- Query Activity --
 functions = true
 statements = true
+plans = true
 
 ; -- Long Transactions --
 long_transactions = true
