--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -25,7 +25,7 @@ host = localhost
 port = 5432
 dbname = postgres
 username = postgres
-password =
+;password =
 
 ;-------------------------------------
 ; report setting
@@ -91,9 +91,9 @@ checkpoint_activity = true
 
 ; -- Autovacuum Activity --
 basic_statistics = true
-vacuum_cancels = true
 io_statistics = true
 analyze_statistics = true
+vacuum_cancels = true
 
 ; -- Replication Activity --
 current_replication_status = true
