--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -93,6 +93,7 @@ checkpoint_activity = true
 basic_statistics = true
 io_statistics = true
 analyze_statistics = true
+modified_rows_ratio = true
 vacuum_cancels = true
 
 ; -- Replication Activity --
