--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -35,79 +35,79 @@ username = postgres
 language = auto
 
 ; --- Report Overview ---
-overview = true
+overview = true                     ; Report Overview
 
 ; -- Alerts --
-alert = true
+alerts = true                       ; Alerts
 
 ; --- Statistics ---
 
 ; -- Databases Statistics --
-database_statistics = true
-transaction_statistics = true
-database_size = true
-recovery_conflicts = true
+database_statistics = true          ; Databases Statistics
+transactions = true                 ; Transactions
+database_size_trend = true          ; Database Size Trend
+recovery_conflicts = true           ; Recovery Conflicts
 
 ; -- Instance Statistics --
-wal_statistics = true
-instance_processes_ratio = true
-instance_processes = true
+write_ahead_logs = true             ; Write Ahead Logs
+backend_status = true               ; Backend Status
+backend_status_trend = true         ; Backend Status Trend
 
 ; --- OS Resources ---
 
 ; -- CPU and Memory --
-cpu_usage = true
-load_average = true
-io_usage = true
-memory_usage = true
+cpu_usage = true                    ; CPU Usage
+load_average = true                 ; Load Average
+io_usage = true                     ; I/O Usage
+memory_usage = true                 ; Memory Usage
 
-; -- Disk Usage --
-disk_usage_per_tablespace = true
-disk_usage_per_table = true
+; -- Disks --
+disk_usage_per_tablespace = true    ; Disk Usage per Tablespace
+disk_usage_per_table = true         ; Disk Usage per Table
 
 ; --- Activities ---
 
 ; -- Notable Tables --
-heavily_updated_tables = true
-heavily_accessed_tables = true
-low_density_tables = true
-fragmented_tables = true
+heavily_updated_tables = true       ; Heavily Updated Tables
+heavily_accessed_tables = true      ; Heavily Accessed Tables
+low_density_tables = true           ; Low Density Tables
+table_fragmentations = true         ; Table Fragmentations
 
 ; -- Query Activity --
-functions = true
-statements = true
-plans = true
+functions = true                    ; Functions
+statements = true                   ; Statements
+plans = true                        ; Plans
 
 ; -- Long Transactions --
-long_transactions = true
+long_transactions = true            ; Long Transactions
 
 ; -- Lock Conflicts --
-lock_conflicts = true
+lock_conflicts = true               ; Lock Conflicts
 
-; --- Operation Activity ---
+; --- Maintenance ---
 
-; -- Checkpoint Activity --
-checkpoint_activity = true
+; -- Checkpoints --
+checkpoints = true                  ; Checkpoints
 
 ; -- Autovacuums --
-basic_statistics = true
-io_statistics = true
-analyze_statistics = true
-modified_rows_ratio = true
-vacuum_cancels = true
+autovacuum_overview = true          ; Overview
+autovacuum_io_summary = true        ; I/O Summary
+analyze_overview = true             ; Analyze Overview
+modified_rows_ratio = true          ; Modified Rows
+cancellations = true                ; Cancellations
 
-; -- Replication Activity --
-current_replication_status = true
-replication_delays = true
+; -- Replication --
+replication_overview = true         ; Overview
+replication_delays = true           ; Delays
 
 ; --- Miscellaneous ---
 
 ; -- Tables and Indexes --
-table = true
-index = true
+tables = true                       ; Tables
+indexes = true                      ; Indexes
 
 ; -- Settings --
-parameter = true
+runtime_params = true               ; Run-time parameters
 
 ; -- Profiles --
-profiles = false
+profiles = false                    ; Profiles
