--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -45,13 +45,13 @@ alerts = true                       ; Alerts
 ; -- Databases Statistics --
 databases_statistics = true         ; Databases Statistics
 transactions = true                 ; Transactions
-database_size_trend = true          ; Database Size Trend
+database_size = true                ; Database Size
 recovery_conflicts = true           ; Recovery Conflicts
 
 ; -- Instance Statistics --
 write_ahead_logs = true             ; Write Ahead Logs
-backend_status = true               ; Backend Status
-backend_status_trend = true         ; Backend Status Trend
+backend_states_overview = true      ; Backend States Overview
+backend_states = true               ; Backend States
 
 ; --- OS Resources ---
 
