pg_stat_bgwriterの表示を追加。グラフの縦軸の説明、ヘルプ(日本語、英語)の内容は暫定のため、修正が必要

--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -52,6 +52,7 @@ recovery_conflicts = true           ; Recovery Conflicts
 write_ahead_logs = true             ; Write Ahead Logs
 backend_states_overview = true      ; Backend States Overview
 backend_states = true               ; Backend States
+bgwriter_statistics = true          ; bgwriter Statistics
 
 ; --- OS Resources ---
 
