Table FragmentationsをCorrelationに修正[SR-040] 以下については残作業有り ・ statsrepo.get_flagmented_tables()の名称(SI-078対応待ち) ・ ヘルプメッセージ(リリース時までに変更があるかも)

--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -72,7 +72,7 @@ io_usage = true                     ; I/O Usage
 heavily_updated_tables = true       ; Heavily Updated Tables
 heavily_accessed_tables = true      ; Heavily Accessed Tables
 low_density_tables = true           ; Low Density Tables
-table_fragmentations = true         ; Table Fragmentations
+correlation = true                  ; Correlation
 
 ; -- Query Activity --
 functions = true                    ; Functions
