pg_stat_wal情報のグラフの追加

--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -54,6 +54,7 @@ recovery_conflicts = true           ; Recovery Conflicts
 
 ; -- Instance Statistics --
 write_ahead_logs = true             ; Write Ahead Logs
+wal_statistics = true               ; WAL statistics
 backend_states_overview = true      ; Backend States Overview
 backend_states = true               ; Backend States
 bgwriter_statistics = true          ; bgwriter Statistics
@@ -158,6 +159,7 @@ profiles = false                    ; Profiles
 ;
 ;; -- Instance Statistics --
 ;write_ahead_logs = true             ; Write Ahead Logs
+;wal_statistics = true               ; WAL statistics
 ;backend_states_overview = true      ; Backend States Overview
 ;backend_states = true               ; Backend States
 ;bgwriter_statistics = true          ; bgwriter Statistics
