Add support for metrics collection from pg_stat_io
pg_statsinfo 16 starts metrics collection from pg_stat_io, a new stats
view introduced in PG16. This commit introduces a new display section
for the new metrics.

--- a/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
+++ b/pg_stats_reporter_lib/pg_stats_reporter.ini.sample
@@ -73,6 +73,7 @@ memory_usage = true                 ; Memory Usage
 disk_usage_per_tablespace = true    ; Disk Usage per Tablespace
 disk_usage_per_table = true         ; Disk Usage per Table
 io_usage = true                     ; I/O Usage
+io_statistics = true                ; I/O Statistics
 
 ; --- Activities ---
 
@@ -189,6 +190,7 @@ memory_information = true           ; Memory Information
 ;disk_usage_per_tablespace = true    ; Disk Usage per Tablespace
 ;disk_usage_per_table = true         ; Disk Usage per Table
 ;io_usage = true                     ; I/O Usage
+;io_statistics = true                ; I/O Statistics
 ;
 ;; --- Activities ---
 ;
